<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">拼好玩</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">手机号码不存在</string>
    <string name="error_invalid_password">密码为6-8位字符</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_inconsistent_password">密码不一致</string>
    <string name="error_field_required">需要填写</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="fine_text">好玩</string>
    <string name="community_text">社区</string>
    <string name="star_mom_text">星妈</string>
    <string name="mine_text">我的</string>
    <string name="area">区域</string>
    <string name="age">适合年龄</string>
    <string name="contact">联系</string>
    <string name="reservation">预约</string>
    <string name="gift_ticket">赠票</string>
    <string name="shield">屏蔽</string>
    <string name="small_partner">小伙伴</string>
    <string name="spell_d">拼拼</string>
    <string name="super_mom">超级妈咪</string>
    <string name="more">更多</string>
    <string name="new_play">新鲜玩法</string>
    <string name="native_community">本社区</string>
    <string name="the_new">最新</string>
    <string name="spell">拼一下</string>
    <string name="partner">参与者</string>
    <string name="activity_detail">活动详情</string>
    <string name="activity_description">活动介绍</string>
    <string name="project">项目</string>
    <string name="class_cost">课程费用</string>
    <string name="one_visit">单次上门</string>
    <string name="stage_visit">阶段上门</string>
    <string name="all_visit">全年上门</string>
    <string name="spell_d_view">查看拼拼</string>
    <string name="spell_d_launch">发起拼拼</string>
    <string name="remainder_tickets">剩余%d张票</string>
    <string name="free">免费</string>
    <string name="starting">首发</string>
    <string name="back_out">再按一次退出程序</string>
    <string name="price">￥ %s</string>
    <string name="distance">距离 %fm</string>
    <string name="sign_up">报名</string>
    <string name="small_partner_time">时间: %1$s 至 %2$s</string>
    <string name="age_text">%1$d 至 %2$d</string>
    <string name="sign_up_times">活动时间: %1$s - %2$s</string>
    <string name="time">%1$s - %2$s</string>
    <string name="people_count">人数: %d人</string>
    <string name="sign_up_people_count">已报名 %d人</string>
    <string name="fetch_from_ablum">从相册选择</string>
    <string name="fetch_from_camera">拍照</string>
    <string name="cancel">取消</string>
    <string name="sdcard_unavailable">SD卡不可用</string>
    <string name="category">类型</string>
    <string name="organization">机构</string>
    <string name="all">全部</string>
    <string name="view_pin_class">查看已有拼课</string>
    <string name="city_choose_title">地区选择</string>
    <string name="empty_content">内容为空,点击刷新</string>
    <string name="fine_detail_tel">电话：%s</string>
    <string name="fine_detail_hour">营业时间 ：%s</string>
    <string name="fine_detail_age">适合年龄 ：%1$d - %2$d</string>
    <string name="share_text">分享</string>
    <string name="reservation_time">%1$s 至 %2$s</string>
    <string name="reserved">已预约</string>
    <string name="fully_booked">已约满</string>
    <string name="sign_up_time">报名时段</string>
    <string name="discuss">讨论</string>
    <string name="activity_people_count">活动人数: %d</string>
    <string name="send">发送</string>
    <string name="input_comment_tips">请输入评论</string>
    <string name="activity_detail_discuss">详情评论</string>
    <string name="discuss_null_tips">评论不能为空</string>
    <string name="pin_class">拼一个</string>
    <string name="class_pinned">已拼</string>
    <string name="class_pin_over">人数已满</string>
    <string name="launch_people">发起人</string>
    <string name="spell_d_class_time">时间: %s</string>
    <string name="spell_d_people_count">人数：%1$d / %2$d</string>
    <string name="launch_spell_d">发起拼拼</string>
    <string name="sign_up_fail_tips">报名失败！</string>
    <string name="sign_up_success_tips">报名成功!</string>
    <string name="class_detail">课程详情</string>
    <string name="spell_d_time">营业时间 ：</string>
    <string name="people_cost">人均价格：%1.2f元</string>
    <string name="spell_class_error">人已经满了</string>
    <string name="no_poi_result">无结果</string>
    <string name="search_hint">输入关键字查询</string>
    <string name="search">搜索</string>
    <string name="search_none_tips">搜索内容不能为空</string>
    <string name="distance_mi">%dm</string>

    <string name="calendar_sunday">日</string>
    <string name="calendar_monday">一</string>
    <string name="calendar_saturday">六</string>
    <string name="calendar_thursday">四</string>
    <string name="calendar_tuesday">二</string>
    <string name="calendar_wednesday">三</string>
    <string name="calendar_friday">五</string>

    <string name="title_order">预约</string>
    <string name="title_class">拼课</string>
</resources>
