<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp"
    android:background="@color/bg_fragment_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@mipmap/fine_group_item_image_divider"
        android:drawablePadding="6dp"
        android:gravity="left|center"
        android:text="@string/class_cost" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/gainsboro" />

    <RelativeLayout
        android:id="@+id/one_visit_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/bottom_border_bg">


        <TextView
            android:id="@+id/one_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/one_visit" />

        <TextView
            android:id="@+id/one_visit_view"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/gray_corner_bg"
            android:gravity="center"
            android:text="@string/spell_d_view"
            android:textColor="#4e4e4d" />

        <TextView
            android:id="@+id/one_visit_launch"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/one_visit_view"
            android:background="@mipmap/corner_yellow_bg"
            android:gravity="center"
            android:text="@string/spell_d_launch"
            android:textColor="#4e4e4d" />

        <TextView
            android:id="@+id/one_visit_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/one_visit_launch"
            android:layout_toRightOf="@+id/one_visit"
            android:ellipsize="end"
            android:gravity="right"
            android:paddingBottom="6dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="6dp"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/stage_visit_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/bottom_border_bg">


        <TextView
            android:id="@+id/stage_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/stage_visit" />

        <TextView
            android:id="@+id/stage_visit_view"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/gray_corner_bg"
            android:gravity="center"
            android:text="@string/spell_d_view"
            android:textColor="#4e4e4d" />

        <TextView
            android:id="@+id/stage_visit_launch"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/stage_visit_view"
            android:background="@mipmap/corner_yellow_bg"
            android:gravity="center"
            android:text="@string/spell_d_launch"
            android:textColor="#4e4e4d" />

        <TextView
            android:id="@+id/stage_visit_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/stage_visit_launch"
            android:layout_toRightOf="@+id/stage_visit"
            android:ellipsize="end"
            android:gravity="right"
            android:paddingBottom="6dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="6dp"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/all_visit_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/bottom_border_bg">


        <TextView
            android:id="@+id/all_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/all_visit" />

        <TextView
            android:id="@+id/all_visit_view"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/gray_corner_bg"
            android:gravity="center"
            android:text="@string/spell_d_view"
            android:textColor="#4e4e4d" />

        <TextView
            android:id="@+id/all_visit_launch"
            android:layout_width="80dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/all_visit_view"
            android:background="@mipmap/corner_yellow_bg"
            android:gravity="center"
            android:text="@string/spell_d_launch"
            android:textColor="#4e4e4d" />

        <TextView
            android:id="@+id/all_visit_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/all_visit_launch"
            android:layout_toRightOf="@+id/all_visit"
            android:ellipsize="end"
            android:gravity="right"
            android:paddingBottom="6dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="6dp"
            android:singleLine="true" />
    </RelativeLayout>

</LinearLayout>