<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="120dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:drawableLeft="@mipmap/fine_group_item_image_divider"
            android:drawablePadding="6dp"
            android:gravity="left|center"
            android:layout_marginLeft="12dp"
            android:text="@string/activity_detail" />


        <TextView
            android:id="@+id/address"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:drawableRight="@mipmap/location"
            android:drawablePadding="6dp"
            android:gravity="left|center"
            android:text="@string/activity_detail" />

        <TextView
            android:id="@+id/time"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="left|center"
            android:text="@string/activity_detail" />

        <TextView
            android:id="@+id/age"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="left|center"
            android:text="@string/activity_detail" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:drawableLeft="@mipmap/fine_group_item_image_divider"
            android:drawablePadding="6dp"
            android:layout_marginTop="12dp"
            android:gravity="left|center"
            android:layout_marginLeft="12dp"
            android:text="@string/activity_description" />
        <TextView
            android:id="@+id/activity_description"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/activity_detail"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:drawableLeft="@mipmap/fine_group_item_image_divider"
            android:drawablePadding="6dp"
            android:gravity="left|center"
            android:layout_marginLeft="12dp"
            android:text="@string/project" />

        <LinearLayout
            android:id="@+id/project_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:drawableLeft="@mipmap/fine_group_item_image_divider"
            android:drawablePadding="6dp"
            android:gravity="left|center"
            android:layout_marginLeft="12dp"
            android:text="@string/project" />

        <RelativeLayout
            android:background="@drawable/bottom_border_bg"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:id="@+id/one_visit_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp">


            <TextView
                android:id="@+id/one_visit"
                android:layout_centerVertical="true"
                android:text="@string/one_visit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/one_visit_view"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@color/transparent_grey"
                android:text="@string/spell_d_view"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/one_visit_launch"
                android:layout_toLeftOf="@+id/one_visit_view"
                android:layout_marginRight="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@mipmap/corner_yellow_bg"
                android:text="@string/spell_d_launch"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/one_visit_cost"
                android:layout_toLeftOf="@+id/one_visit_launch"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@+id/one_visit"
                android:layout_marginLeft="8dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:gravity="right"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/bottom_border_bg"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:id="@+id/stage_visit_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp">


            <TextView
                android:id="@+id/stage_visit"
                android:layout_centerVertical="true"
                android:text="@string/stage_visit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/stage_visit_view"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@color/transparent_grey"
                android:text="@string/spell_d_view"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/stage_visit_launch"
                android:layout_toLeftOf="@+id/stage_visit_view"
                android:layout_marginRight="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@mipmap/corner_yellow_bg"
                android:text="@string/spell_d_launch"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/stage_visit_cost"
                android:layout_toLeftOf="@+id/stage_visit_launch"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@+id/stage_visit"
                android:layout_marginLeft="8dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:gravity="right"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:id="@+id/all_visit_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp">


            <TextView
                android:id="@+id/all_visit"
                android:layout_centerVertical="true"
                android:text="@string/stage_visit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/all_visit_view"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@color/transparent_grey"
                android:text="@string/spell_d_view"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/all_visit_launch"
                android:layout_toLeftOf="@+id/all_visit_view"
                android:layout_marginRight="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@mipmap/corner_yellow_bg"
                android:text="@string/spell_d_launch"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/all_visit_cost"
                android:layout_toLeftOf="@+id/all_visit_launch"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@+id/all_visit"
                android:layout_marginLeft="8dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:gravity="right"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>