<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/empty_layout"
        layout="@layout/empty_layout"></include>

    <com.hwand.pinhaowanr.widget.SwipeRefreshLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/category_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginLeft="10dp"
                        android:drawableLeft="@mipmap/fine_group_item_image_divider"
                        android:drawablePadding="8dp"
                        android:gravity="left|center"
                        android:text="@string/category" />

                    <com.hwand.pinhaowanr.widget.SubGridView
                        android:id="@+id/category_gird"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="5"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:verticalSpacing="10dp">

                    </com.hwand.pinhaowanr.widget.SubGridView>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@mipmap/fine_group_item_image_divider"
                    android:drawablePadding="8dp"
                    android:gravity="left|center"
                    android:text="@string/organization" />


                <LinearLayout
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/yellow_top_border_bg"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:id="@+id/area_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/area_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/area"
                            android:textSize="15sp" />

                        <ImageView
                            android:id="@+id/area_indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:layout_toRightOf="@+id/area_text"
                            android:src="@mipmap/down_indicator" />

                    </RelativeLayout>

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="12dp"
                        android:background="#cccccc" />


                    <RelativeLayout
                        android:id="@+id/age_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/age_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/age"
                            android:textSize="15sp" />

                        <ImageView
                            android:id="@+id/age_indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:layout_toRightOf="@+id/age_text"
                            android:src="@mipmap/down_indicator" />

                    </RelativeLayout>

                </LinearLayout>


                <com.hwand.pinhaowanr.widget.SubListView
                    android:id="@+id/listview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cacheColorHint="#00000000"
                    android:fadingEdge="none"
                    android:scrollbars="none"

                    >

                </com.hwand.pinhaowanr.widget.SubListView>


            </LinearLayout>

        </ScrollView>


    </com.hwand.pinhaowanr.widget.SwipeRefreshLayout>

</RelativeLayout>